...
  /* Note that the overlay will be added on showing the keyboard. On tap the overlay, dismiss the 
   * keyboard & remove the newest entry from the table view. */
  /* If the user tap Go button, change the cell contents from text field to basic label.*/
  
}
- (IBAction)onTapEdit:(UIBarButtonItem*)barButton {
  if([barButton.title isEqualToString:@"Edit"]){
    self.listsCollectionView.editingMode = YES;
    barButton.title = @"Done";
    CGFloat delay = 0.0;
    for (ShoppingListCell* cell in self.listsCollectionView.visibleCells) {
      /* Display Circular Delete button */
      cell.deleteBtn.hidden = NO;

      /* Shake the cell of collection view */
...
