...
  }
  return YES;
}

/* Validating Entered Text https://goo.gl/Wzf305 */
-(BOOL)textFieldShouldEndEditing:(UITextField *)textField{
  return (nil == [self.view viewWithTag:ERROR_MSG_TAG]);
}

/* Tracking Multiple Text Fields https://goo.gl/NWJqBV */
- (void) textFieldDidEndEditing:(UITextField *)textField{
  
  switch ((TEXT_FIELD_TAG)textField.tag) {
...
