...
                                            <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q49-KT-eph" userLabel="Sticky Header View">
                                                <rect key="frame" x="0.0" y="0.0" width="600" height="84.5"/>
                                                <subviews>
                                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jZM-Ug-DGM">
                                                        <rect key="frame" x="0.0" y="0.0" width="600" height="84.5"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                        <state key="normal" title="Create new list">
                                                            <color key="titleColor" red="1" green="0.8784313725490196" blue="0.1764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="onTapAdd:" destination="ekK-wL-KBd" eventType="touchUpInside" id="Y2N-y5-h2q"/>
                                                        </connections>
                                                    </button>
...
                                </items>
                            </toolbar>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ad-lE-rjQ">
                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                <items>
                                    <navigationItem id="uZe-fC-t4f">
                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="88l-dt-7W5"/>
                                    </navigationItem>
                                </items>
                            </navigationBar>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y2x-Wm-Qwq" userLabel="Preview">
                                <rect key="frame" x="0.0" y="64" width="600" height="472"/>
                            </view>
...
