...
            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
            <autoresizingMask key="autoresizingMask"/>
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NSn-hQ-xkA" id="0yn-hb-MaI">
                <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="List Title" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ORW-cy-R44">
                        <rect key="frame" x="14" y="0.0" width="586" height="44"/>
                        <nil key="textColor"/>
                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                        <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                    </textField>
                </subviews>
...
